license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.SecurityDepositDemandLetter"
version = "1.0"
description = "Security deposit demand letter"
readme = "README.md"
authors = [
    { name = "Devin Webster", email = "Devin.Webster@su.suffolk.edu" },
]
dependencies = [
    "docassemble.ALAnyState @ git+https://github.com/suffolklitlab/docassemble-alanystate.git@main",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
